Made it little bit responsive and fixed overflowing in page

--- a/index.css
+++ b/index.css
@@ -29,7 +29,9 @@ html,body{
 
 
 /* --------------------------Nav section----------------------------- */
-
+#wrapper{
+    overflow: hidden;
+}
 #nav {
     position: fixed;
     width: 50%;
@@ -217,7 +219,7 @@ html,body{
 /* -------------------------------About me Section ----------------------------*/
 #about-me{
     height: 120vh;
-    width: 100%;
+    min-width: 100%;
     background-color:#1B1B1B;
     padding: 80px 100px;
     display: flex;
@@ -703,7 +705,119 @@ form input,form textarea{
 
 
 
-/* --------------------CSS for small screens---------------------- */
-@media only screen and (max-width: 850px) {
-   
+/* --------------------CSS for Tablat screens---------------------- */
+@media only screen and (max-width: 1400px)  {
+    /* --------------------------Nav section----------------------------- */
+    #nav {
+        width: 50%;
+    }
+    #profile-pic{
+        width: 35%;
+    }
+    #nav a{
+        font-size: 1.8vw;
+    }
+    /* Social BTNs  */
+
+    #socails-btn i{
+    font-size: 4vh;
+    }
+/* Main text on homepage  */
+
+#main h1{
+    font-size: 10vh;
 }
+
+#main h3{
+    margin: 50px;
+}
+#main p{
+    font-size: 2.5vh;
+}
+
+
+
+/* -------------------------------About me Section ----------------------------*/
+
+#about-me{
+    width: 120%;
+
+}
+
+#con-left{
+    width: 30%;
+}
+
+
+
+/* -------------------------------Project Section -----------------------*/
+
+
+
+
+
+
+#project-Left .sub-title{
+    font-size: 7vh;
+}
+#project-Left #aboutme-detail{
+    letter-spacing: 3px;
+}
+
+
+/*----------------------------------- Skill icons Section------------------------------------- */
+.project-list{
+    margin-top: 50px;
+}
+
+
+#project-Left h1{
+    font-size: 7vh;
+}
+#project-Left h3{
+    letter-spacing: 3px;
+}
+
+#skill-icons img{
+    width: 100%;
+}
+
+
+
+
+/*----------------------------------- Contact me Section------------------------------------- */
+
+
+#contact-left{
+    width: 70%;
+}
+#contact-left h1{
+    font-size: 5vw;
+}
+#contact-left i{
+    font-size: 2vw;
+}
+#contact-left p{
+    letter-spacing: 5px;
+    font-size: 1.5vw;
+}
+
+#contact-socail-icons i{
+    font-size: 5vh;
+}
+
+#contact-Right form{
+    width: 70%;
+}
+#contact-Right button{
+    left: 20%;
+}
+
+
+
+
+
+
+}
+
+
